@@ -194,9 +194,7 @@ public class BucketService extends TaskResourceService {
         Integer retention = Integer.valueOf(param.getRetention());
 
         // Hard Quota should be more than SoftQuota
-        if (softQuota >= hardQuota) {
-            throw APIException.badRequests.invalidQuotaRequestForObjectStorage(param.getLabel());
-        }
+        verifyQuotaValues(softQuota, hardQuota, param.getLabel());
 
         // check varray
         VirtualArray neighborhood = _dbClient.queryObject(VirtualArray.class, param.getVarray());
@@ -218,7 +216,7 @@ public class BucketService extends TaskResourceService {
 
         VirtualPoolCapabilityValuesWrapper capabilities = new VirtualPoolCapabilityValuesWrapper();
 
-        capabilities.put(VirtualPoolCapabilityValuesWrapper.RESOURCE_COUNT, new Integer(1));
+        capabilities.put(VirtualPoolCapabilityValuesWrapper.RESOURCE_COUNT, Integer.valueOf(1));
         capabilities.put(VirtualPoolCapabilityValuesWrapper.THIN_PROVISIONING, Boolean.FALSE);
 
         List<BucketRecommendation> placement = _bucketScheduler.placeBucket(neighborhood, cos, capabilities);
@@ -231,7 +229,7 @@ public class BucketService extends TaskResourceService {
         BucketRecommendation recommendation = placement.get(0);
 
         String task = UUID.randomUUID().toString();
-        Bucket bucket = prepareBucket(param, project, tenant, neighborhood, cos, flags, recommendation, task);
+        Bucket bucket = prepareBucket(param, project, tenant, neighborhood, cos, flags, recommendation);
 
         _log.info(String.format(
                 "createBucket --- Bucket: %1$s, StoragePool: %2$s, StorageSystem: %3$s",
@@ -355,11 +353,10 @@ public class BucketService extends TaskResourceService {
      * @param vpool
      * @param flags
      * @param placement
-     * @param token
      * @return
      */
     private Bucket prepareBucket(BucketParam param, Project project, TenantOrg tenantOrg,
-            VirtualArray neighborhood, VirtualPool vpool, DataObject.Flag[] flags, BucketRecommendation placement, String token) {
+            VirtualArray neighborhood, VirtualPool vpool, DataObject.Flag[] flags, BucketRecommendation placement) {
         _log.debug("Preparing Bucket creation for Param : {}", param);
         StoragePool pool = null;
         Bucket bucket = new Bucket();
@@ -431,9 +428,7 @@ public class BucketService extends TaskResourceService {
         }
 
         // Hard Quota should be more than SoftQuota
-        if (softQuota != 0 && hardQuota != 0 && softQuota >= hardQuota) {
-            throw APIException.badRequests.invalidQuotaRequestForObjectStorage(bucket.getLabel());
-        }
+        verifyQuotaValues(softQuota, hardQuota, bucket.getLabel());
 
         // if no retention is provided, use the old value
         if (retention == 0) {
@@ -500,5 +495,19 @@ public class BucketService extends TaskResourceService {
     public ResRepFilter<? extends RelatedResourceRep> getPermissionFilter(StorageOSUser user,
             PermissionsHelper permissionsHelper) {
         return new ProjOwnedResRepFilter(user, permissionsHelper, Bucket.class);
+    }
+    
+    /**
+     * Hard Quota should be more than SoftQuota
+     * 
+     * @param softQuota Soft Quota value
+     * @param hardQuota Hard Quota value
+     * @param bucketName Bucket name
+     * @throws APIException If SoftQuota is more than HardQuota
+     */
+    private void verifyQuotaValues(Long softQuota, Long hardQuota, String bucketName) throws APIException {
+        if (softQuota < 0 || hardQuota < 0 || softQuota > hardQuota) {
+            throw APIException.badRequests.invalidQuotaRequestForObjectStorage(bucketName);
+        }
     }
 }
